--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
      <a href="aio.txt">example txt</a>
         <br/>
      <a href="aio.zip">example zip</a>
+        <br/>
+     <a href="captcha.zip">cap zip</a>
     </body>
 </html>
     
