--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <h4>autentication form</h4>
      <a href="aio.txt">example txt</a>
         <br/>
-     <a href="aio.zip">example zip</a>
+     <a href="iaoII.zip">example zip</a>
         <br/>
      <a href="captcha.zip">cap zip</a>
     </body>
